@@ -1,3 +1,8 @@
+Wed Apr 24 15:36:52 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: more sane precision computations especially when
+	  zoomed in.  Also reduce font size in case of too many digits.
+
 Wed Apr 24 13:58:27 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/genius.xml: include the function list in the main xml
